Taking care of various SonrQube issues.